--- a/src/app/shared/component/sell-house/sell-house.component.scss
+++ b/src/app/shared/component/sell-house/sell-house.component.scss
@@ -121,6 +121,7 @@
         background-color: #09f;
         color: white;
         padding: 7px;
+        width: 165px;
     }
     .characteristicSelected{
         background-color: green;
