--- a/src/app/modules/add-listing/card/card.component.scss
+++ b/src/app/modules/add-listing/card/card.component.scss
@@ -1,84 +1,3 @@
-
-.row {
-width: 100%;
-}
-
-.align-items-center {
-    display: flex;
-    align-items: center;
-}
-// SELL HOUSE
-
-.sell-photo {
-    height: 300px;
-    width: 100%;
-    background-image: url('../../../assets/images/sell-house.jpg');
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-
-.sell-text {
-    background-color: black;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    height: 70px;
-    //font-weight: bold;
-    font-size: 30px;
-}
-
-// RENT HOUSE
-
-.rent-photo {
-    height: 300px;
-    width: 100%;
-    background-image: url('../../../assets/images/rent-house.jpg');
-    background-repeat:no-repeat;
-
-    background-size:cover;
-
-}
-
-.rent-text {
-    background-color: black;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    height: 70px;
-    //font-weight: bold;
-    font-size: 30px;
-}
-
-// RENT ROOM
-
-.rent-room-photo {
-    height: 300px;
-    width: 100%;
-    background-image: url('../../../assets/images/rent-room.jpg');
-    background-repeat:no-repeat;
-
-    background-size:cover;
-
-}
-
-.rent-room-text {
-    background-color: black;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    height: 70px;
-    //font-weight: bold;
-    font-size: 30px;
-}
-
-.on-hover-click {
-    cursor: pointer;
-}
-
-
 $hoverEasing: cubic-bezier(0.23, 1, 0.32, 1);
 $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 :host{
@@ -117,11 +36,11 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
         0.6s $hoverEasing,
         box-shadow 2s $hoverEasing;
       box-shadow:
-        rgba(red, 0.2) 0 0 40px 5px,
-        rgba(#ff4f81, 1) 0 0 0 1px,
+        rgba(#00FFFF, 0.2) 0 0 40px 5px,
+        rgba(#7DF9FF, 1) 0 0 0 1px,
         rgba(black, 0.66) 0 30px 30px 0,
         inset #424242 0 0 0 5px,
-        inset #ff4f81 0 0 0 6px;
+        inset #7DF9FF 0 0 0 6px;
     }
   }
 }
@@ -137,7 +56,7 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   box-shadow:
     rgba(black, 0.66) 0 30px 30px 0,
     inset #424242 0 0 0 5px,
-    inset rgba(#ff4f81, 0.5) 0 0 0 6px;
+    inset rgba(#7DF9FF, 0.5) 0 0 0 6px;
   transition: 1s $returnEasing;
 }
 
@@ -166,3 +85,11 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
    }
   }
 }
+
+.title{
+    margin-top: 270px;
+    color: white;
+    width: 100%;
+    text-align: center;
+}
+
