--- a/src/app/shared/property-details/property-details.component.scss
+++ b/src/app/shared/property-details/property-details.component.scss
@@ -173,6 +173,18 @@ mat-divider {
     color:red;
 }
 
+.main-characteristics{
+    margin-left: 10px;
+    span{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    .main-characteristics-title{
+        font-weight: bold;
+    }
+
+}
+
 ::ng-deep{
     .map-location{
         #map {
