fix home cards css

--- a/src/app/modules/add-listing/card/card.component.scss
+++ b/src/app/modules/add-listing/card/card.component.scss
@@ -4,7 +4,7 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   display:flex;
 }
 .card-wrap {
-    margin: 10px;
+  margin: 100px;
   transform: perspective(800px);
   transform-style: preserve-3d;
   cursor: pointer;
@@ -48,9 +48,9 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 .card {
   // position: relative;
   flex: 0 0 240px;
-  width: 240px;
-  height: 320px;
-  background-color: #424242;
+  width: 300px;
+  height: 400px;
+  background-color:whitesmoke;
   overflow: hidden;
   border-radius: 10px;
   box-shadow:
@@ -70,8 +70,8 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   pointer-events: none;
   vertical-align:middle;
   & .image-placeholder{
-    max-width: 80%;
-    left: 10%;
+    max-width: 90%;
+    left: 5%;
     display: flex;
     align-self: center;
     justify-self: center;
@@ -87,8 +87,8 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .title{
-    margin-top: 270px;
-    color: white;
+    margin-top: 360px;
+    color: black;
     width: 100%;
     text-align: center;
 }
