--- a/src/app/shared/component/property-frame/property-frame.component.scss
+++ b/src/app/shared/component/property-frame/property-frame.component.scss
@@ -34,6 +34,7 @@
     color: rgb(89, 142, 255);
     font-size: large;
     margin-left: 10px;
+    margin-top: 5px;
 }
 .address-price-row {
     display: flex;
