--- a/src/app/shared/component/filter/filter-container/filter-container.component.html
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.html
@@ -1,10 +1,11 @@
-<div class="column background">
+<app-filter-search-on-view *ngIf="router.url === '/search'"></app-filter-search-on-view>
+<div class="column background" *ngIf="router.url === '/home'">
     <div class=center-filter>
-        <div class="column">
-            <!-- <div class="welcome">Find your dream house</div> -->
+        <div class="col-12">
+           
         </div>
     </div>
-    <div class="center-filter">
+    <div class="center-filter" >
         <div class="column background-filter black-background"
             [ngClass]="[isMobile ? 'full-width' : 'threefourth-width']">
             <div class="full-width">
@@ -15,22 +16,24 @@
             </div>
         </div>
     </div>
-    <div class="center-filter">
-        <div class="column background-filter background-color"
-            [ngClass]="[isMobile ? 'full-width' : 'threefourth-width']">
-            <div class="row">
-                <div class="full-width">
-                    <app-filter-property (purposeTypeChange)="purposeTypeEvent($event)"
-                        (propertyTypeChange)="propertyTypeEvent($event)" (priceFromChange)="priceFromEvent($event)"
-                        (priceToChange)="priceToEvent($event)" (bedroomsChange)="bedroomsEvent($event)"
-                        (bathroomsChange)="bathroomsEvent($event)" (conditionsChange)="conditionsEvent($event)"
-                        (sizeToChange)="sizeToEvent($event)" (sizeFromChange)="sizeFromEvent($event)"
-                        (yearBuiltFromChange)="yearBuiltFromEvent($event)"
-                        (yearBuiltToChange)="yearBuiltToEvent($event)"
-                        (characteristicsChange)="characteristicsEvent($event)">
-                    </app-filter-property>
+   <ng-container *ngIf="router.url === '/home'">
+        <div class="center-filter" >
+            <div class="column background-filter background-color"
+                [ngClass]="[isMobile ? 'full-width' : 'threefourth-width']">
+                <div class="row">
+                    <div class="full-width">
+                        <app-filter-property (purposeTypeChange)="purposeTypeEvent($event)"
+                            (propertyTypeChange)="propertyTypeEvent($event)" (priceFromChange)="priceFromEvent($event)"
+                            (priceToChange)="priceToEvent($event)" (bedroomsChange)="bedroomsEvent($event)"
+                            (bathroomsChange)="bathroomsEvent($event)" (conditionsChange)="conditionsEvent($event)"
+                            (sizeToChange)="sizeToEvent($event)" (sizeFromChange)="sizeFromEvent($event)"
+                            (yearBuiltFromChange)="yearBuiltFromEvent($event)"
+                            (yearBuiltToChange)="yearBuiltToEvent($event)"
+                            (characteristicsChange)="characteristicsEvent($event)">
+                        </app-filter-property>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </ng-container>
 </div>
