--- a/src/app/shared/component/filter/filter-container/filter-container.component.scss
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.scss
@@ -9,7 +9,6 @@
 
 .welcome {
     color: white;
-    padding-top: 20px;
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -37,7 +36,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    .col-12{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 .btn {
