--- a/src/app/shared/property-details/property-details.component.scss
+++ b/src/app/shared/property-details/property-details.component.scss
@@ -207,6 +207,7 @@ mat-divider {
     border: none;
 }
 
+.container{
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
     border-radius: 0 20px 20px 0 !important;
     flex-grow: 1 !important;
@@ -219,6 +220,7 @@ mat-divider {
     background-color: rgb(241, 241, 241);
     border-radius: 20px 20px 20px 20px !important;
   }
+}
 
 
   @media (min-width: $dimension-breakpoint-xxs-min) {
