--- a/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
+++ b/src/app/shared/component/filter/filter-search-on-view/filter-search-on-view.component.html
@@ -1,4 +1,4 @@
-<form [formGroup] = "searchProperties">
+<form [formGroup] = "searchProperties" [patchFormGroupValues]='formValues$ | async'>
 <div class="row search-container">    
     <mat-form-field class="col-4" appearance="outline">
         <input matInput placeholder="Location" #search type="search" (keyup.enter)="onKeyupEnter(search.value)"
