--- a/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.html
+++ b/src/app/shared/component/filter/pop-up-filters/pop-up-filters.component.html
@@ -1,4 +1,4 @@
-<form [formGroup] = "searchMoreProperties" >
+<form [formGroup] = "searchMoreProperties" [patchFormGroupValues]='formValues$ | async'>
 
 <div class="row justify-content-center" *ngIf="mobile"> 
   <mat-form-field appearance="outline" class="col-5">
