--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -38,7 +38,7 @@
               account_circle
             </span>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item [routerLink]="['/userboard']">Profile</button>
+              <button mat-menu-item routerLink="['/userboard']">Profile</button>
               <button mat-menu-item>Messages</button>
               <button mat-menu-item (click)="logout()">Logout</button>
             </mat-menu>
@@ -62,10 +62,10 @@
   <mat-sidenav-container>
     <mat-sidenav #snav>
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['/admin']">Buy</a>
-        <a mat-list-item [routerLink]="['']">Sell</a>
-        <a mat-list-item [routerLink]="['/admin']">Rent</a>
-        <a mat-list-item [routerLink]="['']">Add listing</a>
+        <a mat-list-item routerLink="['/admin']">Buy</a>
+        <a mat-list-item routerLink="['']">Sell</a>
+        <a mat-list-item routerLink="['/admin']">Rent</a>
+        <a mat-list-item routerLink="['']">Add listing</a>
       </mat-nav-list>
     </mat-sidenav>
 
