--- a/src/app/modules/add-listing/card/card.component.scss
+++ b/src/app/modules/add-listing/card/card.component.scss
@@ -4,12 +4,13 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   display:flex;
 }
 .card-wrap {
-  margin: 100px;
+  margin-right: 100px;
+  margin-left: 100px;
   transform: perspective(800px);
   transform-style: preserve-3d;
   cursor: pointer;
   width:240px;
-  
+
   &:hover {
     .card-info {
       transform: translateY(0);
