--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -71,7 +71,7 @@
 
     <mat-sidenav-content>
       <ng-container *ngTemplateOutlet="template"></ng-container>
-      <app-footer></app-footer>
+      <app-footer class="footer"></app-footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
