--- a/src/app/modules/add-listing/add-listing.component.scss
+++ b/src/app/modules/add-listing/add-listing.component.scss
@@ -1,6 +1,12 @@
 
 .row {
 width: 100%;
+width: 100%;
+margin: 0;
+position: absolute;
+top: 50%;
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
 }
 
 .align-items-center {
