--- a/src/app/modules/add-listing/card/card.component.html
+++ b/src/app/modules/add-listing/card/card.component.html
@@ -1,11 +1,12 @@
 <div #card class="card-wrap">
-    <div class="card"
-      [ngStyle]="cardStyle()">
-      <div class="card-bg" [ngStyle]="cardBgTransform()">
+    <div class="card">
+      <div class="card-content">
         <div class="image-placeholder">
             <img src="/assets/images/{{cardBgImage}}.jpg" width="22" />
         </div>
-        <span class="title">{{cardText}}</span>
+        <div class="col text-center card-text">
+          <button class="button-text">{{cardText}}</button>
+        </div>
       </div>
     </div>
 </div>
