--- a/src/app/modules/add-listing/card/card.component.scss
+++ b/src/app/modules/add-listing/card/card.component.scss
@@ -1,49 +1,13 @@
+@import "~src/sass/_vars";
 $hoverEasing: cubic-bezier(0.23, 1, 0.32, 1);
 $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 :host{
   display:flex;
 }
 .card-wrap {
-  margin-right: 100px;
-  margin-left: 100px;
-  transform: perspective(800px);
-  transform-style: preserve-3d;
+  margin-right: 50px;
+  margin-left: 50px;
   cursor: pointer;
-  width:240px;
-
-  &:hover {
-    .card-info {
-      transform: translateY(0);
-    }
-    .card-info p {
-      opacity: 1;
-    }
-    .card-info, .card-info p {
-      transition: 0.6s $hoverEasing;
-    }
-    .card-info:after {
-      transition: 5s $hoverEasing;
-      opacity: 1;
-      transform: translateY(0);
-    }
-    .card-bg {
-      transition: 
-        0.6s $hoverEasing,
-        opacity 5s $hoverEasing;
-      opacity: 0.8;
-    }
-    .card {
-      transition:
-        0.6s $hoverEasing,
-        box-shadow 2s $hoverEasing;
-      box-shadow:
-        rgba(#00FFFF, 0.2) 0 0 40px 5px,
-        rgba(#7DF9FF, 1) 0 0 0 1px,
-        rgba(black, 0.66) 0 30px 30px 0,
-        inset #424242 0 0 0 5px,
-        inset #7DF9FF 0 0 0 6px;
-    }
-  }
 }
 
 .card {
@@ -51,46 +15,171 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   flex: 0 0 240px;
   width: 300px;
   height: 400px;
+  padding: 24px;
   background-color:whitesmoke;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow:
-    rgba(black, 0.66) 0 30px 30px 0,
-    inset #424242 0 0 0 5px,
-    inset rgba(#7DF9FF, 0.5) 0 0 0 6px;
-  transition: 1s $returnEasing;
-}
-
-.card-bg {
-  width: 100%;
-  height: 100%;
   display: flex;
-  transition:
-    1s $returnEasing,
-    opacity 5s 1s $returnEasing;
-  pointer-events: none;
-  vertical-align:middle;
-  & .image-placeholder{
-    max-width: 90%;
-    left: 5%;
-    display: flex;
-    align-self: center;
-    justify-self: center;
-    align-items: center;
-    vertical-align: middle;
-    position: absolute;
+  position: relative;
+  box-shadow: rgb(0 0 0 / 30%) 0px 2px 4px 0px;
+  border: none;
+  cursor: pointer;
+  max-width: 100%;
+  background-color: rgb(255, 255, 255);
+  box-sizing: border-box;
+  transition: all 300ms ease-in-out 0s;
+  flex-shrink: 0;
+}
+.card:hover {
+  transform: scale(1.02) translate(0px, -8px);
+  transition: all 300ms ease-in-out 0s;
 
-& img {
- object-fit: cover;
-   width: 100%;
-   }
+  .button-text, .button-text:focus, .button-text:visited, .button-text:disabled {
+    background-color: white;
+    border-color: black;
+    color: black;
   }
 }
 
-.title{
-    margin-top: 360px;
-    color: black;
-    width: 100%;
-    text-align: center;
+.card-content{
+    display: flex;
+    flex-flow: row wrap;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
 }
 
+
+img {
+  width: 250px;
+  height: 150px;
+}
+  
+.card-text{
+  margin-top: 150px;
+
+  .button-text{
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border: 1px solid;
+    border-radius: 4px;
+    user-select: none;
+    padding: 9px 16px;
+    margin: 24px 0px 16px;
+    appearance: none;
+    transition-property: background-color, border-color, color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
+    outline: none;
+    box-shadow: none;
+    width: auto;
+    position: relative;
+    background-color: black;
+    border-color: white;
+    color: white;
+    -webkit-font-smoothing: antialiased;
+    text-transform: none;
+    font-family: "Open Sans", Tahoma, Geneva, sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+  }  
+}
+
+
+@media (min-width: $dimension-breakpoint-xxs-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 70px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: $dimension-breakpoint-xs-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 70px;
+    cursor: pointer;
+  }
+}
+
+
+
+@media (min-width: $dimension-breakpoint-sm-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 70px;
+    cursor: pointer;
+  }
+}
+
+
+
+@media (min-width: $dimension-breakpoint-md-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+
+
+@media (min-width: $dimension-breakpoint-lg-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: $dimension-breakpoint-xl-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: $dimension-breakpoint-xl-mid-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: $dimension-breakpoint-xxl-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: $dimension-breakpoint-xxxl-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
+
+
+@media (min-width: $dimension-breakpoint-max-min) {
+  .card-wrap {
+    margin-right: 50px;
+    margin-left: 50px;
+    cursor: pointer;
+  }
+}
